--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,74 @@
-# ESLint configuration
-# Intended to be a strict superset of Node core style, with the exception of
-# rules which would cause breakage in old Node versions (e.g. ES6 features).
-# Uses Airbnb's ES5 styles where they don't conflict with Node core or my prefs.
-
-extends: "airbnb/legacy"
-
 env:
   node: true
-  ## disable unwanted browser env from airbnb/legacy
-  # Note: Only works for ESLint 2+: https://github.com/eslint/eslint/issues/3915
-  browser: false
+
+# enable ECMAScript features
+ecmaFeatures:
+  arrowFunctions: true
+  binaryLiterals: true
+  blockBindings: true
+  classes: true
+  forOf: true
+  generators: true
+  objectLiteralShorthandMethods: true
+  objectLiteralShorthandProperties: true
+  octalLiterals: true
+  templateStrings: true
 
 rules:
   # Possible Errors
   # list: https://github.com/eslint/eslint/tree/master/docs/rules#possible-errors
-  ## disallow trailing commas in array and object literals
-  comma-dangle: [2, "never"]
+  ## check debugger sentence
+  no-debugger: 2
+  ## check duplicate arguments
+  no-dupe-args: 2
+  ## check duplicate object keys
+  no-dupe-keys: 2
+  ## check duplicate switch-case
+  no-duplicate-case: 2
+  ## disallow assignment of exceptional params
+  no-ex-assign: 2
+  ## disallow use of reserved words as keys like enum, class
+  no-reserved-keys: 2
+  ## disallow unreachable code
+  no-unreachable: 2
+  ## require valid typeof compared string like typeof foo === 'strnig'
+  valid-typeof: 2
 
   # Best Practices
   # list: https://github.com/eslint/eslint/tree/master/docs/rules#best-practices
-  ## require curly braces around all control statements
-  curly: [2, "all"]
-  ## allow reassignment of function parameters
-  # simplicity for optional arguments outweighs the perf advantage, usually
-  no-param-reassign: 0
-  ## disallow unnecessary use of Function.prototype.{apply,call}
-  no-useless-call: 2
-  ## allow vars anywhere that satisfies other linting constraints
-  vars-on-top: 0
+  ## require falls through comment on switch-case
+  no-fallthrough: 2
+
+  # Stylistic Issues
+  # list: https://github.com/eslint/eslint/tree/master/docs/rules#stylistic-issues
+  ## use single quote, we can use double quote when escape chars
+  quotes: [2, "single", "avoid-escape"]
+  ## 2 space indentation
+  indent: [2, 2]
+  ## add space after comma
+  comma-spacing: 2
+  ## put semi-colon
+  semi: 2
+  ## require spaces operator like var sum = 1 + 1;
+  space-infix-ops: 2
+  ## require spaces return, throw, case
+  space-return-throw-case: 2
+  ## no space before function, eg. 'function()'
+  space-before-function-paren: [2, "never"]
+  ## require space before blocks, eg 'function() {'
+  space-before-blocks: [2, "always"]
+  ## require parens for Constructor
+  new-parens: 2
+  ## max 80 length
+  max-len: [2, 80, 2]
+  ## max 2 consecutive empty lines
+  no-multiple-empty-lines: [2, {max: 2}]
+  ## require newline at end of files
+  eol-last: 2
+  ## no trailing spaces
+  no-trailing-spaces: 2
+  # require space after keywords, eg 'for (..)'
+  space-after-keywords: 2
 
   # Strict Mode
   # list: https://github.com/eslint/eslint/tree/master/docs/rules#strict-mode
@@ -36,40 +77,31 @@ rules:
 
   # Variables
   # list: https://github.com/eslint/eslint/tree/master/docs/rules#variables
-  ## disallow shadowing of variables
-  no-shadow: [2, { "builtinGlobals": true, "hoist": "all" }]
-  ## disallow declaration of variables that are not used in the code
-  # allow unused args for documentation, future use, and correct .length
-  no-unused-vars: [2, {"args": "none"}]
-  ## disallow referencing variables before declaring them, excluding functions
-  # since it is required for mutually-recursive functions
-  no-use-before-define: [2, "nofunc"]
+  ## disallow use of undefined variables (globals)
+  no-undef: 2
 
-  # Stylistic Issues
-  # list: https://github.com/eslint/eslint/tree/master/docs/rules#stylistic-issues
-  ## require spaces around single-line blocks
-  block-spacing: [2, "always"]
-  ## allow unnamed functions
-  func-names: 0
-  ## max 80 length
-  # ignore URLs to allow unbroken URLs in comments
-  max-len: [2, 80, 2, {"ignoreUrls": true}]
-  ## require parens for Constructor
-  new-parens: 2
-  ## allow nested ternary expressions
-  # if they are indented one-expression-per-line, they are clear enough for me
-  no-nested-ternary: 0
-  ## disallow process.exit()
-  # this is disabled locally only when require.main === module
-  no-process-exit: 2
-  ## disallow extra spaces in object literals
-  object-curly-spacing: [2, "never"]
-  ## allow multiple variable declarations per block/function and multiple
-  ## declarators per declaration
-  one-var: 0
-  ## require initialized variables to be declared on separate lines
-  one-var-declaration-per-line: [2, "initializations"]
-  ## no space before function, eg. 'function()'
-  space-before-function-paren: [2, "never"]
+  # Custom rules in tools/eslint-rules
+  require-buffer: 2
 
-# vi: set sts=2 sw=2 et ft=yaml:
+# Global scoped method and vars
+globals:
+  DTRACE_HTTP_CLIENT_REQUEST           : false
+  LTTNG_HTTP_CLIENT_REQUEST            : false
+  COUNTER_HTTP_CLIENT_REQUEST          : false
+  DTRACE_HTTP_CLIENT_RESPONSE          : false
+  LTTNG_HTTP_CLIENT_RESPONSE           : false
+  COUNTER_HTTP_CLIENT_RESPONSE         : false
+  DTRACE_HTTP_SERVER_REQUEST           : false
+  LTTNG_HTTP_SERVER_REQUEST            : false
+  COUNTER_HTTP_SERVER_REQUEST          : false
+  DTRACE_HTTP_SERVER_RESPONSE          : false
+  LTTNG_HTTP_SERVER_RESPONSE           : false
+  COUNTER_HTTP_SERVER_RESPONSE         : false
+  DTRACE_NET_STREAM_END                : false
+  LTTNG_NET_STREAM_END                 : false
+  COUNTER_NET_SERVER_CONNECTION_CLOSE  : false
+  DTRACE_NET_SERVER_CONNECTION         : false
+  LTTNG_NET_SERVER_CONNECTION          : false
+  COUNTER_NET_SERVER_CONNECTION        : false
+  escape                               : false
+  unescape                             : false
