Add fs.*FileSync tests from nodejs/node@08039628
Along with test runner and common files.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,6 +1,12 @@
-extends: "../.eslintrc"
+## Test-specific linter rules
 
-env:
-    mocha: true
+rules:
+  ## allow undeclared variables
+  no-undef: 0
+  ## allow global Buffer usage
+  require-buffer: 0
+  ## common module is mandatory in tests
+  required-modules: [2, "common"]
 
-# vi: set sts=2 sw=2 et ft=yaml:
+globals:
+  gc: false
