--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "eslint . && echo ESLint passed.",
     "postpublish": "git push --follow-tags origin master && echo Remember to update GitHub Releases from CHANGELOG.md && echo until skywinder/github-changelog-generator#56 is fixed.",
-    "preversion": "git-branch-is master && travis-status -b -c -qwx && depcheck && david",
+    "preversion": "git-branch-is master && travis-status -b -c -qwx && depcheck && david -i eslint",
     "test": "npm run lint && npm run test-unit",
     "test-unit": "python tools/test.py --mode=release parallel -J",
     "version": "github_changelog_generator -t \"$npm_config_gcg_github_token\" --future-release \"$npm_package_version\" && echo && echo === Please edit CHANGELOG.md as desired, then exit === && echo && $npm_config_shell && git commit -m \"Update CHANGELOG.md for $npm_package_version\" CHANGELOG.md",
